// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with small prop correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 32px;
  border-radius: 4px;
  padding: 6px 12px;
  font-size: 14px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  line-height: 16px;
  cursor: pointer;
}

.c0 svg {
  height: 24px;
  width: 24px;
  color: #FFFFFF;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button renders a primary button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  font-size: 16px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  line-height: 20px;
  cursor: pointer;
}

.c0 svg {
  height: 24px;
  width: 24px;
  color: #FFFFFF;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button renders a primary-ghost button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 0px;
  font-size: 16px;
  border-color: transparent;
  background-color: transparent;
  color: #5D2DEF;
  line-height: 20px;
  cursor: pointer;
}

.c0 svg {
  height: 24px;
  width: 24px;
  color: #5D2DEF;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button renders a primary-outline button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  font-size: 16px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  color: #5D2DEF;
  line-height: 20px;
  cursor: pointer;
}

.c0 svg {
  height: 24px;
  width: 24px;
  color: #5D2DEF;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button renders a secondary button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  font-size: 16px;
  border-color: #FC6145;
  background-color: #FC6145;
  color: #FFFFFF;
  line-height: 20px;
  cursor: pointer;
}

.c0 svg {
  height: 24px;
  width: 24px;
  color: #FFFFFF;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button renders a secondary-ghost button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 0px;
  font-size: 16px;
  border-color: transparent;
  background-color: transparent;
  color: #FC6145;
  line-height: 20px;
  cursor: pointer;
}

.c0 svg {
  height: 24px;
  width: 24px;
  color: #FC6145;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button renders a secondary-outline button unchanged 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  font-size: 16px;
  border-color: #FC6145;
  background-color: #FFFFFF;
  color: #FC6145;
  line-height: 20px;
  cursor: pointer;
}

.c0 svg {
  height: 24px;
  width: 24px;
  color: #FC6145;
}

<div>
  <button
    class="c0"
  />
</div>
`;
